@@ -1,4 +1,4 @@
-$Id: NEWS,v 1.360 2003-01-25 02:38:00 castaglia Exp $
+$Id: NEWS,v 1.361 2003-01-28 22:00:23 castaglia Exp $
 
 CVS
 ---------------------------------
@@ -46,6 +46,8 @@ CVS
 - Bug 1734 - Cygwin - Unable to set uid
 - Bug 1938 - upload to root directory fails.  This was caused by caching
   effects.
+- Bug 1939 - RLimitMemory seems broken.  The problem turned out to be bad
+  handling of the case where sizes were used without specifying units.
 
 1.2.8rc1 - Released 28-Dec-2002
 ---------------------------------
